--- a/public/css/index.css
+++ b/public/css/index.css
@@ -68,6 +68,15 @@ a {
 #our-robots {
   overflow: hidden;
 }     
+.scrolling-wrapper {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+ .card{
+    display: inline-block;
+}
+
 video {
   position: absolute;
   top: 50%;
